--- a/lib/index.html
+++ b/lib/index.html
@@ -36,31 +36,12 @@
         }
 
         .navbar .query {
-            -webkit-box-shadow: rgba(0, 0, 0, 0.0976563) 0px 1px 2px 0px inset, rgba(255, 255, 255, 0.148438) 0px 1px 0px 0px;
-            -webkit-rtl-ordering: logical;
-            -webkit-transition-delay: 0s;
-            -webkit-transition-duration: 0s;
-            -webkit-transition-property: none;
-            -webkit-transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
-            -webkit-user-select: text;
             background-color: #626262;
-            border-bottom-color: #151515;
-            border-bottom-left-radius: 14px;
-            border-bottom-right-radius: 14px;
-            border-bottom-style: solid;
-            border-bottom-width: 1px;
-            border-left-color: #151515;
-            border-left-style: solid;
-            border-left-width: 1px;
-            border-right-color: #151515;
-            border-right-style: solid;
-            border-right-width: 1px;
-            border-top-color: #151515;
-            border-top-left-radius: 14px;
-            border-top-right-radius: 14px;
-            border-top-style: solid;
-            border-top-width: 1px;
-            box-shadow: rgba(0, 0, 0, 0.0976563) 0px 1px 2px 0px inset, rgba(255, 255, 255, 0.148438) 0px 1px 0px 0px;
+            border-color: #151515;
+            border-radius: 14px 14px 14px 14px;
+            border-style: solid;
+            border-width: 1px;
+            box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.098) inset, 0 1px 0 0 rgba(255, 255, 255, 0.15);
             color: white;
             display: inline-block;
             float: right;
@@ -68,10 +49,8 @@
             font-size: 13px;
             height: 18px;
             line-height: 13px;
-            padding-bottom: 4px;
-            padding-left: 9px;
-            padding-right: 9px;
-            padding-top: 4px;
+            margin-top: -2px;
+            padding: 4px 9px;
             width: 160px;
         }
 
