--- a/lib/index.html
+++ b/lib/index.html
@@ -73,8 +73,8 @@
 
         .log .inner-line {
             padding: 0 50px;
-            margin-left: 10em;
-            text-indent: -10em;
+            margin-left: 96pt;
+            text-indent: -96pt;
         }
 
         .log .line.selected {
