User can select css style as option

--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>__TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles/__THEME__.css">
 </head>
 <body>
     <div class="navbar">
