--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>__TITLE__</title>
+    <title>tail -F __TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
     <div class="navbar">
-        <span class="brand">__TITLE__</span>
+        <span class="brand">tail -F __TITLE__</span>
         <input type="text" class="query" placeholder="Filter" tabindex="1">
     </div>
     <pre class="log"></pre>
