Files on socket.io namespace

--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -17,7 +17,8 @@
     <script type="text/javascript">
         window.load = App.init({
             container: document.getElementsByClassName('log')[0],
-            filterInput: document.getElementsByClassName('query')[0]
+            filterInput: document.getElementsByClassName('query')[0],
+            namespace: '__NAMESPACE__'
         });
   </script>
 </body>
