--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -4,7 +4,7 @@
     <title>tail -F __TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="/styles/__THEME__.css">
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="/favicon.ico">
 </head>
 <body>
     <div class="navbar">
