--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -3,14 +3,22 @@
 <head>
     <title>tail -F __TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" type="text/css" href="/styles/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/styles/__THEME__.css">
     <link rel="icon" href="/favicon.ico">
 </head>
 <body>
-    <div class="navbar">
-        <span class="brand">tail -F __TITLE__</span>
-        <input type="text" class="query" placeholder="Filter" tabindex="1">
-    </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+            <span class="navbar-brand" href="#">tail -F __TITLE__</span>
+            <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control query" placeholder="Filter" tabindex="1">
+                </div>
+            </form>
+        </div>
+    </nav>
+
     <pre class="log"></pre>
 
     <script src="/socket.io/socket.io.js"></script>
