--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/favicon.ico">
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <span class="navbar-brand" href="#">tail -F __TITLE__</span>
             <form class="navbar-form navbar-right" role="search">
@@ -29,7 +29,9 @@
         window.load = App.init({
             socket: socket,
             container: document.getElementsByClassName('log')[0],
-            filterInput: document.getElementsByClassName('query')[0]
+            filterInput: document.getElementsByClassName('query')[0],
+            topbar: document.getElementsByClassName('topbar')[0],
+            body: document.getElementsByTagName('body')[0]
         });
   </script>
 </body>
