--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -22,6 +22,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/tinycon.min.js"></script>
+    <script src="/ansi_up.js"></script>
     <script src="/app.js"></script>
     <script type="text/javascript">
         var socket = new io.connect('/' + '__NAMESPACE__');
