--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -10,7 +10,7 @@
     <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <span class="navbar-brand" href="#">tail -F __TITLE__</span>
-            <form class="navbar-form navbar-right" role="search">
+            <form class="navbar-form navbar-right" role="search" onkeypress="return event.keyCode != 13;">
                 <div class="form-group">
                     <input type="text" class="form-control query" placeholder="Filter" tabindex="1">
                 </div>
