--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>tail -F __TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="__PATH__/styles/__THEME__.css">
     <link rel="icon" href="__PATH__/favicon.ico">
 </head>
+
 <body>
     <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
@@ -26,7 +28,7 @@
     <script src="__PATH__/app.js"></script>
     <script type="text/javascript">
         var socket = new io.connect('/__NAMESPACE__', {
-            path: '__PATH__/socket.io/'
+            path: '__PATH__/socket.io'
         });
 
         window.load = App.init({
@@ -36,6 +38,7 @@
             topbar: document.getElementsByClassName('topbar')[0],
             body: document.getElementsByTagName('body')[0]
         });
-  </script>
+    </script>
 </body>
+
 </html>
