--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>tail -F __TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="__PATH__/styles/__THEME__.css">
     <link rel="icon" href="__PATH__/favicon.ico">
 </head>
