Button to clear logs

--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
     <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <span class="navbar-brand" href="#">tail -F __TITLE__</span>
+            <button class="btn btn-danger navbar-btn">Clear</button>
             <form class="navbar-form navbar-right" role="search" onkeypress="return event.keyCode != 13;">
                 <div class="form-group">
                     <input type="text" class="form-control query" placeholder="Filter" tabindex="1">
@@ -37,7 +38,8 @@
             container: document.getElementsByClassName('log')[0],
             filterInput: document.getElementsByClassName('query')[0],
             topbar: document.getElementsByClassName('topbar')[0],
-            body: document.getElementsByTagName('body')[0]
+            body: document.getElementsByTagName('body')[0],
+            clearButton: document.getElementsByTagName('button')[0]
         });
     </script>
 </body>
