--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,7 @@
 <body>
     <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">tail -f</a>
-            <p class="navbar-text" href="#">__TITLE__</p>
+            <a class="navbar-brand" href="#">tail -f __TITLE__</a>
             <form class="navbar-form navbar-right" role="search" onkeypress="return event.keyCode != 13;">
                 <div class="form-group">
                     <input type="text" class="form-control query" placeholder="Filter" tabindex="1">
