Add title attribute with full path. Closes #85

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-10">
-                    <span class="navbar-brand">tail -f __TITLE__</span>
+                    <span class="navbar-brand" title="__TITLE__">tail -f __TITLE__</span>
                 </div>
                 <div class="col-sm-2">
                     <form class="navbar-form-custom" role="search" onkeypress="return event.keyCode != 13;">
