Add pause button

--- a/web/index.html
+++ b/web/index.html
@@ -13,10 +13,13 @@
     <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-10">
+                <div class="col-sm-9">
                     <span class="navbar-brand" title="__TITLE__">tail -f __TITLE__</span>
+                    <div class="text-right">
+                        <button type="button" class="btn btn-light btn-paused" data-toggle="button" aria-pressed="false" autocomplete="off"></button>
+                    </div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-3">
                     <form class="navbar-form-custom" role="search" onkeypress="return event.keyCode != 13;">
                         <input type="text" class="form-control query" placeholder="Filter" tabindex="1">
                     </form>
@@ -43,6 +46,7 @@
             socket: socket,
             container: document.getElementsByClassName('log')[0],
             filterInput: document.getElementsByClassName('query')[0],
+            pausedBtn: document.getElementsByClassName('btn-paused')[0],
             topbar: document.getElementsByClassName('topbar')[0],
             body: document.getElementsByTagName('body')[0]
         });
