--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
                 <div class="col-sm-9">
                     <span class="navbar-brand" title="__TITLE__">tail -f __TITLE__</span>
                     <div class="text-right">
-                        <button type="button" class="btn btn-light btn-paused" data-toggle="button" aria-pressed="false" autocomplete="off"></button>
+                        <button type="button" class="btn btn-light btn-pause" data-toggle="button" aria-pressed="false" autocomplete="off"></button>
                     </div>
                 </div>
                 <div class="col-sm-3">
@@ -46,7 +46,7 @@
             socket: socket,
             container: document.getElementsByClassName('log')[0],
             filterInput: document.getElementsByClassName('query')[0],
-            pausedBtn: document.getElementsByClassName('btn-paused')[0],
+            pauseBtn: document.getElementsByClassName('btn-pause')[0],
             topbar: document.getElementsByClassName('topbar')[0],
             body: document.getElementsByTagName('body')[0]
         });
