Fix websocket error during handshake
See [this SO issue](https://stackoverflow.com/questions/41381444/websocket-connection-failed-error-during-websocket-handshake-unexpected-respo)

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,8 @@
     <script src="__PATH__/app.js"></script>
     <script type="text/javascript">
         var socket = new io.connect('/__NAMESPACE__', {
-            path: '__PATH__/socket.io'
+            path: '__PATH__/socket.io',
+            transports: ['websocket']
         });
 
         window.load = App.init({
