--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="topbar navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-9">
