fix: ellipsis in title

--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,11 @@
     <nav class="topbar navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-9">
-                    <span class="navbar-brand" title="__TITLE__">tail -f __TITLE__</span>
-                    <div class="text-right">
-                        <button type="button" class="btn btn-light btn-pause" data-toggle="button" aria-pressed="false" autocomplete="off"></button>
-                    </div>
+                <div class="col-sm-8">
+                    <span class="navbar-brand text-overflow" title="__TITLE__">tail -f __TITLE__</span>
+                </div>
+                <div class="col-sm-1 text-right">
+                    <button type="button" class="btn btn-light btn-pause" data-toggle="button" aria-pressed="false" autocomplete="off"></button>
                 </div>
                 <div class="col-sm-3">
                     <form class="navbar-form-custom" role="search" onkeypress="return event.keyCode != 13;">
