--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
     <title>tail -f __TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="__PATH__/styles/__THEME__.css">
-    <link rel="icon" href="__PATH__/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/frontail/styles/__THEME__.css">
+    <link rel="icon" href="/frontail/favicon.ico">
 </head>
 
 <body>
@@ -33,13 +33,13 @@
     </div>
 
 
-    <script src="__PATH__/socket.io/socket.io.js"></script>
-    <script src="__PATH__/tinycon.min.js"></script>
-    <script src="__PATH__/ansi_up.js"></script>
-    <script src="__PATH__/app.js"></script>
+    <script src="/frontail/socket.io/socket.io.js"></script>
+    <script src="/frontail/tinycon.min.js"></script>
+    <script src="/frontail/ansi_up.js"></script>
+    <script src="/frontail/app.js"></script>
     <script type="text/javascript">
         var socket = new io.connect('/__NAMESPACE__', {
-            path: '__PATH__/socket.io',
+            path: '/frontail/socket.io',
             transports: ['websocket']
         });
 
