Add --title option to set HTML/header title

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>tail -f __TITLE__</title>
+    <title>__TITLE__</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="__PATH__/styles/__THEME__.css">
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-8">
-                    <span class="navbar-brand text-overflow" title="__TITLE__">tail -f __TITLE__</span>
+                    <span class="navbar-brand text-overflow" title="__TITLE__">__TITLE__</span>
                 </div>
                 <div class="col-sm-1 text-right">
                     <button type="button" class="btn btn-light btn-pause" data-toggle="button" aria-pressed="false" autocomplete="off"></button>
